--- a/index.html
+++ b/index.html
@@ -73,7 +73,19 @@
                 </li>
             </ul>
         </aside>
-        <div class="content p-20">Content</div>
+        <div class="content w-full">
+            <!-- Start Head -->
+            <div class="head bg-white p-15 between-flex">
+                <div class="search p-relative">
+                    <input class="p-10 b-ccc rad-10 ml-5" type="text" placeholder="Type A Keyword" name="word">
+                </div>
+                <div class="icons d-flex align-center">
+                    <span class="notification p-relative"><i class="fa-regular fa-bell fa-lg"></i></span>
+                    <img class="ml-15" src="imgs/avatar-1.png" alt="">
+                </div>
+            </div>
+            <!-- End Head -->
+        </div>
     </div>
 </body>
 
