Created Settings Page & Added Some Modified In Code And Also Inside Code Of Dashboard Page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
     <!-- Font Awesome Library -->
     <link rel="stylesheet" href="css/all.min.css">
     <!-- Main Template CSS -->
@@ -30,43 +29,43 @@
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="#setting.html">
+                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="setting.html">
                         <i class="fa-solid fa-gear fa-fw"></i>
                         <span class="ml-10 hide-mobile">Setting</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="#profile.html">
+                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="profile.html">
                         <i class="fa-regular fa-user fa-fw"></i>
                         <span class="ml-10 hide-mobile">Profile</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="#project.html">
+                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="project.html">
                         <i class="fa-solid fa-diagram-project fa-fw"></i>
                         <span class="ml-10 hide-mobile">Project</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="#courses.html">
+                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="courses.html">
                         <i class="fa-solid fa-graduation-cap fa-fw"></i>
                         <span class="ml-10 hide-mobile">Courses</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="#friends.html">
+                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="friends.html">
                         <i class="fa-regular fa-circle-user fa-fw"></i>
                         <span class="ml-10 hide-mobile">Friends</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="#files.html">
+                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="files.html">
                         <i class="fa-regular fa-file fa-fw"></i>
                         <span class="ml-10 hide-mobile">Files</span>
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="#plans.html">
+                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="plans.html">
                         <i class="fa-regular fa-credit-card fa-fw"></i>
                         <span class="ml-10 hide-mobile">Plans</span>
                     </a>
@@ -472,7 +471,7 @@
             </div>
             <!-- Start Projects   -->
             <div class="projects p-20 bg-white rad-10 m-20">
-                <h2 class="mt-0 mb-20">projects</h2>
+                <h2 class="mt-0 mb-20">Projects</h2>
                 <div class="responsive-table">
                     <table class="fs-15 w-full">
                         <thead class="bg-eee fw-b">
