--- a/setting.html
+++ b/setting.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="project.html">
+                    <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="projects.html">
                         <i class="fa-solid fa-diagram-project fa-fw"></i>
                         <span class="ml-10 hide-mobile">Project</span>
                     </a>
