Create Plans Page And Add Event In Plan Card And Finish Modified Project.

--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <div class="page d-flex">
         <aside class="sidebar bg-white p-20 p-relative">
             <h3 class="p-relative txt-c mt-0">Bilal</h3>
-            <ul class="m-0">
+            <ul>
                 <li>
                     <a class="d-flex align-center fs-14 c-black rad-6 p-10 mb-5" href="index.html">
                         <i class="fa-solid fa-chart-bar fa-fw"></i>
@@ -91,8 +91,8 @@
                 <!-- Start Project Box -->
                 <div class="project p-20 bg-white rad-6 p-relative">
                     <span class="date p-absolute c-grey fs-13">15/10/2021</span>
-                    <h4 class="m-0">Elzero Dashboard</h4>
-                    <p class="mt-10 mb-10 c-grey fs-14">Elzero Dashboard Project Design And Programming And Hosting</p>
+                    <h4 class="m-0">Bilal Dashboard</h4>
+                    <p class="mt-10 mb-10 c-grey fs-14">Bilal Dashboard Project Design And Programming And Hosting</p>
                     <div class="team p-relative txt-c-mobile">
                         <a href="#"><img class="rad-half" src="imgs/project-avatar1.png" alt=""></a>
                         <a href="#"><img class="rad-half" src="imgs/project-avatar2.png" alt=""></a>
